# grok-cli

./: .pre-commit-config.yaml  CONTRIBUTING.md  PRIVACY.md  README.md  TERMS.md  pyproject.toml
docs/: commands.md  troubleshooting.md
grok_cli/: __init__.py  config.py  main.py  models.py
grok_cli/auth/: login.py
grok_cli/commands/: chat.py
tests/: test_chat.py  test_config.py
